actioncable 이용한 실시간 익명채팅 + like,unlike + progress bar + 디자인 조금 170824

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,11 @@
  */
 
 @import "bootstrap";
-@import "bootstrap-sprockets";
-@import "font-awesome";
-@import 'comments';
+
+#messages {
+  max-height: 450px;
+  overflow-y: auto;
+  .avatar {
+    margin: 0.5rem;
+  }
+}
