--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,10 +1,10 @@
 <div id="comments_form_<%=comment.post.id%>">
   <%= simple_form_for([comment.post, comment], remote: true ) do | f | %>
     <div class='form-inputs'>
-      <%= f.input :comment, label: false, placeholder: 'Add a comment.', input_html: { rows: 5 } %>
+      <%= f.input :comment, label: false, placeholder: '댓글을 입력해주세요', input_html: { rows: 5 } %>
     </div>
     <div class='form-actions'>
-      <%= f.button :submit %>
+      <%= f.button :submit, value="작성"%>
     </div>
   <% end %>
 </div>
