--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -30,6 +30,11 @@
     <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
     <%= f.password_field :current_password, autocomplete: "off" %>
   </div>
+  
+  <div class="field">
+    <%= f.label "닉네임" %><br/>
+    <%= f.text_field :nickname, :required => true %><br/>
+  </div>
 
   <div class="actions">
     <%= f.submit "Update" %>
