--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -12,17 +12,17 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :title %>
+    <%= form.label :제목 %>
     <%= form.text_field :title, id: :post_title %>
     <%= form.hidden_field :user_id, value: current_user.id %>
   </div>
 
   <div class="field">
-    <%= form.label :content %>
+    <%= form.label :내용 %>
     <%= form.text_area :content, id: :post_content %>
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit value="작성"%>
   </div>
 <% end %>
