--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,35 +1,21 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Posts</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @posts.each do |post| %>
-      <tr>
-        <td><%= post.title %> :: <%= post.content %></td>
-        <td><%= link_to 'Show', post %></td>
-        <% if current_user.id == post.user.id %>
-        <td><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        <% end %>
-      </tr>
+<div style="margin-left: 40%; margin-top: 30px;"><h1>익명인 게시판</h1>
+<div style="margin-top: 35px; margin-left: 5px;">
+<% @posts.each do |post| %>
+  <span style="font-size: 18px;">제목: <%= link_to "#{post.title}", post %>
+    <% if current_user.id == post.user.id %>
+      <%= link_to '수정', edit_post_path(post) %>
+      <%= link_to '삭제', post, method: :delete, data: { confirm: "정말 삭제하시겠습니까??" } %>
     <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<% if current_user.nil? %>
-  <%= link_to '회원가입', new_user_registration_path %>
-  <%= link_to '로그인', new_user_session_path %>
-<% else %>
-  <%= link_to '로그아웃', destroy_user_session_path, method: 'delete' %>
+      <%= link_to "좋아요 #{post.get_upvotes.size}", like_post_path(post), method: :put, style: 'font-size: 12px; height: 30px; width: 65px; color: #FFF8DC', class: "btn btn-info"%>
+      <%= link_to "싫어요 #{post.get_downvotes.size}", dislike_post_path(post), method: :put, style: 'font-size: 12px; height: 30px; width: 65px; color: #FFF8DC', class: "btn btn-danger"%>
+  </span>
+<br><hr style="margin-right: 80%; width: 270px; border: 1px solid black;">
 <% end %>
 
-<%= link_to '글쓰기', new_post_path %>
+
+<br>
+<span style="margin-left: 30px;"><%= link_to '글쓰기', new_post_path, style: "font-size: 18px; color: black", class: "btn btn-secondary" %>
+<%= link_to '익명 채팅방', anonymous_rooms_path, style: "width: 120px; height:40px; font-size: 18px; color: black", class: "btn btn-warning" %>
+</span>
+</div>
+</div>
