--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,21 +1,38 @@
-<div style="margin-left: 40%; margin-top: 30px;"><h1>익명인 게시판</h1>
-<div style="margin-top: 35px; margin-left: 5px;">
-<% @posts.each do |post| %>
-  <span style="font-size: 18px;">제목: <%= link_to "#{post.title}", post %>
-    <% if current_user.id == post.user.id %>
-      <%= link_to '수정', edit_post_path(post) %>
-      <%= link_to '삭제', post, method: :delete, data: { confirm: "정말 삭제하시겠습니까??" } %>
+<h3 style="margin-top: 30px; text-align: center;">자유롭게 익명글을 작성해보세요</h3>
+<div class="container" style="margin-top:30px;">
+
+<div class="row hidden-xs-down">    
+<div style="color: white; padding: 10px 10px 10px 10px; border-bottom: 3px solid #D5D5D5; background: #778899;" class="col-1 col-sm-1 col-md-1 " align="center">번호</div>
+<div style="color: white; padding: 10px 10px 10px 10px; border-bottom: 3px solid #D5D5D5; background: #696969;" class="col-3 col-sm-4 col-md-2" align="center">작성자</div>
+<div style="color: white; padding: 10px 10px 10px 10px; border-bottom: 3px solid #D5D5D5; background: #696969;" class="col-4 col-sm-4 col-md-4" align="center">제목</div>
+<div style="color: white; padding: 10px 10px 10px 10px; border-bottom: 3px solid #D5D5D5; background: #696969;" class="col-5 col-sm-3 col-md-2" align="center">선호도</div>
+<div style="color: white; padding: 10px 10px 10px 10px; border-bottom: 3px solid #D5D5D5; background: #696969;" class="col-5 col-sm-3 col-md-3" align="center">작성시간</div>
+</div>
+<% if @posts.empty? %>
+    <h2 class="text-center" style="margin-top: 30px;">게시글이 없습니다</h2>
+<% else %>
+    <div style="margin-top: 5px;"></div>
+    <div style="border-bottom: 2px solid gray;" class="row col-13 hidden-sm-up"></div>
+    <% @posts.each do |post| %>
+    <div class="row">
+        <div align="center" style="padding: 10px 10px 10px 10px; border-bottom: 1px solid gray;" class="col-1 col-sm-1 col-md-1 text-left text-sm-center hidden-xs-down"><%= post.id %></div>
+        <div align="center" style="padding: 10px 10px 10px 10px; border-bottom: 1px solid gray;" class="col-3 col-sm-4 col-md-2 text-left text-sm-center"><%= post.user.nickname %></div>
+        <div align="center" style="padding: 10px 10px 10px 10px; border-bottom: 1px solid gray;" class="col-4 col-sm-4 col-md-4 text-left text-sm-center"><%= link_to "#{post.title}", post_path(post) %></div>
+        <div align="center" style="padding: 10px 10px 10px 10px; border-bottom: 1px solid gray;" class="col-5 col-sm-4 col-md-2 text-left text-sm-center">
+          <div class="progress" style="margin-left: 15%; width: 70%;">
+          <div class="progress-bar bg-info" role="progressbar" style="width: <%= post.get_upvotes.size.to_f / post.votes_for.size * 100 %>%" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100"></div>
+          <div class="progress-bar bg-danger" role="progressbar" style="width: <%= post.get_downvotes.size.to_f / post.votes_for.size * 100 %>%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
+          </div>
+        </div>
+        <div align="center" style="padding: 10px 10px 10px 10px; border-bottom: 1px solid gray;" class="col-5 col-sm-4 col-md-3 text-left text-sm-center hidden-xs-down"><%= post.created_at.strftime('%Y-%m-%d %H:%M:%S') %></div>
+    </div>
     <% end %>
-      <%= link_to "좋아요 #{post.get_upvotes.size}", like_post_path(post), method: :put, style: 'font-size: 12px; height: 30px; width: 65px; color: #FFF8DC', class: "btn btn-info"%>
-      <%= link_to "싫어요 #{post.get_downvotes.size}", dislike_post_path(post), method: :put, style: 'font-size: 12px; height: 30px; width: 65px; color: #FFF8DC', class: "btn btn-danger"%>
-  </span>
-<br><hr style="margin-right: 80%; width: 270px; border: 1px solid black;">
 <% end %>
 
-
 <br>
-<span style="margin-left: 30px;"><%= link_to '글쓰기', new_post_path, style: "font-size: 18px; color: black", class: "btn btn-secondary" %>
-<%= link_to '익명 채팅방', anonymous_rooms_path, style: "width: 120px; height:40px; font-size: 18px; color: black", class: "btn btn-warning" %>
+<span><%= link_to '글쓰기', new_post_path, style: "background: #778899; font-size: 18px; color: white;", class: "btn btn-secondary" %>
 </span>
+<br><br>
+<%= paginate @posts %>
 </div>
 </div>
