--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,5 +1,8 @@
 <li id="comment_<%=comment.id %>">
-  <%= comment.comment %>,
-  <%= time_ago_in_words(comment.created_at) %> ago
-  <%= link_to "삭제", [comment.post, comment], method: :delete, remote: true, data: { confirm: "정말 삭제하시겠습니까?" } %>
-</li>
+  <%= comment.user.nickname %>
+  <%= comment.comment %>
+  <%= time_ago_in_words(comment.created_at) %>전
+  <% if can? :destroy, comment %>
+      <%= link_to "삭제", [comment.post, comment], method: :delete, remote: true, data: { confirm: "정말로 지우시겠습니까?" }, class: "fa fa-times" %>
+  <% end %>
+  </li>
