--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,10 +2,17 @@
 <html>
   <head>
     <title>LikelionFianlPage</title>
+    <% #모바일 인식 %>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
+    
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    
+    <% #부트스트랩 CDN %>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
   </head>
 
   <body>
@@ -13,11 +20,13 @@
     <nav style="background-color: #2F4F4F; height: 45px;", class="navbar navbar-light bg-faded">
       <%=link_to "Anonymous Chat Community", posts_path, style: "color: white;" %>
         <% if user_signed_in? %>
-          <span style="color: #00FFFF; margin-left: 67%;"><%= current_user.nickname %>님</span>
+          <%= link_to '익명 채팅방', anonymous_rooms_path, style: "margin-left: 55%; width: 120px; height:35px; font-size: 15px; color: black", class: "btn btn-warning" %>
+          <%= link_to "게시판가기" , posts_path, style: "width: 120px; height:35px; font-size: 15px; color: black", class: "btn btn-secondary" %></p>
+          <span style="color: #00FFFF;"><%= current_user.nickname %>님</span>
           <%= link_to '정보수정', edit_user_registration_path, style: "color: white;" %>
           <%= link_to '로그아웃', destroy_user_session_path, method: 'delete', style: "color: white;" %>
         <% else %>
-          <%= link_to '회원가입', new_user_registration_path, style: "color: white;" %>
+          <%= link_to '회원가입', new_user_registration_path, style: "margin-left: 77%; color: white;" %>
           <%= link_to '로그인', new_user_session_path, style: "color: white;" %>
         <% end %>
 
