--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>수정페이지</h1>
 
 <%= render 'form', post: @post %>
-
+<div style="text-align: center;">
 <%= link_to '보기', @post %> |
 <%= link_to '뒤로가기', posts_path %>
+</div>
