--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,4 @@
-<h1>New Post</h1>
-
 <%= render 'form', post: @post %>
-
-<%= link_to 'Back', posts_path %>
+<div style="text-align: center;">
+<%= link_to '뒤로가기', posts_path %>
+</div>
