--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,17 +1,26 @@
-<p id="notice"><%= notice %></p>
+<div class="container" style="margin-top:30px; margin-bottom: 100px;">
+<h2><%= @post.title %></h2><br/>
+<%= @post.user != nil ? @post.user.nickname : @post.user_nickname %>
+<span style="float: right;">
+<%= link_to "좋아요 #{@post.get_upvotes.size}", like_post_path(@post), method: :put, style: 'background: #00BFFF; font-size: 15px; height: 40px; width: 80px; color: #FFF8DC', class: "btn btn-info"%>
+<%= link_to "싫어요 #{@post.get_downvotes.size}", dislike_post_path(@post), method: :put, style: 'font-size: 15px; height: 40px; width: 80px; color: #FFF8DC', class: "btn btn-danger"%>
+</span>
+<hr/>
+<div style="float: right"><i class="fa fa-clock-o" aria-hidden="true"></i> <span style="margin-right: 20px;"><%= @post.created_at.strftime('%Y-%m-%d %H:%M:%S') %></span></div>
+<br/><br/><%= content_tag(:div, @post.content.html_safe, :class => "panel-body") %>
 
-<p>
-  <strong>Title:</strong>
-  <%= @post.title %>
-</p>
+<br/><br/>
+<div style="float: left">
+  <%= link_to '목록', posts_path, style: 'color: white; background: #778899;', class: "btn btn-info" %>
+  <% if can? :update, @post %>
+  <%= link_to '수정', edit_post_path(@post), class: "btn btn-warning" %>
+  <% end %>
+  <% if can? :destroy, @post %>
+  <%= link_to '삭제', @post, method: :delete, data: { confirm: '정말로 삭제하시겠습니까?' }, style: 'color: white;', class: "btn btn-danger" %>
+  <% end %>
+</div>
 
-<p>
-  <strong>Content:</strong>
-  <%= @post.content %>
-  
-  <%= render "comments/comments" %>
-</p>
-<% if current_user.id == @post.user.id %>
-<%= link_to '수정하기', edit_post_path(@post) %> |
-<% end %>
-<%= link_to '뒤로가기', posts_path %>
+<div style="float: right">
+</div>
+<br/><br/><hr/>
+<%= render "comments/comments" %>
