devise 수정, paginate 수정 by 170827

--- a/app/views/anonymous_rooms/index.html.erb
+++ b/app/views/anonymous_rooms/index.html.erb
@@ -6,7 +6,7 @@
 </div>
 <div style="text-align: center;">
 <div class="alert alert-warning" role="alert">
-<% @new_currency.each do |cur| %>
+<% @new_currency.each_with_index do |cur| %>
 <p><%= cur %></p>
 <% end %>
 </div>
