--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -11,8 +11,7 @@
   </div>
 
   <div class="actions" style="margin-top: 20px;" align="center">
-    <%= f.button :submit, class: "btn btn-primary" %>
-    <%= link_to '목록', posts_path, style: "color:white;",class: "btn btn-info" %>
+    <%= f.button :submit, style: "font-size: 20px;" , class: "btn btn-primary" %>
   </div>
 <% end %>
 </div>
