--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,15 +1,17 @@
-<div class="container">
-<h2>Sign up</h2>
-
+<body style="background: url('/img/anonymous3.jpg') no-repeat center center/cover fixed; margin-top: 0px;">
+<div style="margin-left:20%; margin-top: 7%; text-align: center; color:white;", class="container">
+    <div style="margin-bottom: 40px;", class="col-12 col-sm-8 col-md-12">
+  <strong style="background: #696969; color:white;", class="alert alert-success" role="alert">익명 게시판과 채팅방에서 자유롭게 활동해보세요.</strong>
+</div>
 <%= form_for(resource, as: resource_name, data: {confirm:"이대로 회원가입 하시겠습니까?"}, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
-  <div class="field">
+    <div class="field col-12 col-sm-8 col-md-12">
     <%= f.label :이메일%><br />
     <%= f.email_field :email, autofocus: true %>
   </div>
 
-  <div class="field">
+    <div class="field col-12 col-sm-8 col-md-12">
     <%= f.label :비밀번호 %>
     <% if @minimum_password_length %>
     <em>(최소 <%= @minimum_password_length %> 자리로 작성)</em>
@@ -17,21 +19,16 @@
     <%= f.password_field :password, autocomplete: "off" %>
   </div>
 
-  <div class="field">
+    <div class="field col-12 col-sm-8 col-md-12">
     <%= f.label :비밀번호_확인 %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
-  
-  <div class="field">
-    <%= f.label :닉네임 %><br />
-    <%= f.text_field :nickname %>
-  </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" ,class: "btn right"%>
+  <div class="actions col-12 col-sm-8 col-md-12">
+    <%= f.submit "회원가입" ,style:"background:white; color:black;", class: "btn right"%>
   </div>
 <% end %>
 
 <%= render "devise/shared/links" %>
-
+</body>
 </div>
