--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -23,6 +23,11 @@
     <%= f.label :비밀번호_확인 %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
+  
+  <div style="margin-bottom: 2%;", class="field col-12 col-sm-8 col-md-12">
+    <%= f.label :닉네임 %><br />
+    <%= f.text_field :nickname %>
+  </div>
 
   <div class="actions col-12 col-sm-8 col-md-12">
     <%= f.submit "회원가입" ,style:"background:white; color:black;", class: "btn right"%>
